background image on ios bug fix attempt 1

--- a/styles.css
+++ b/styles.css
@@ -348,7 +348,7 @@ body {
 
 /* ********* LANDSCAPE ********* */
 .section-landscape {
-  height: 60vh;
+  height: 70vh;
   position: relative;
   /* background: url('./assets/parallax_8002.jpg');
   background-position: center center;
